--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	<div data-role="content">
     
     <a href="#CD9" data-rel="popup" data-position="window">
-   <img src="imagenes/índice.jpg" alt="Skaret View"  style="width=10px"; id="cd"></a>
+   <img src="imagenes/indice.jpg" alt="Skaret View"  style="width=10px"; id="cd"></a>
    <p>Deslize sobre la imagen </p>
    <p><span style="color:blue"></span></p>
    
@@ -61,7 +61,7 @@
    <p>
 <div data-role="popup" id="CD9">
 <p> Este es la imagen de CD9 zoom!!! </p>
-  <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">close</a> <img src="imagenes/índice.jpg" style="width="300px;height:300px;" alt="Skaret View">
+  <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">close</a> <img src="imagenes/indice.jpg" style="width="300px;height:300px;" alt="Skaret View">
   </div>
   <p>
   
