--- a/index.html
+++ b/index.html
@@ -52,16 +52,13 @@
 	<div data-role="content">
     
     <a href="#CD9" data-rel="popup" data-position="window">
-   <img src="imagenes/indice.jpg" alt="Skaret View"  style="width=10px"; id="cd"></a>
+   <img src="imagenes/hola.jpg" alt="Skaret View"  style="width=10px"; id="cd"></a>
    <p>Deslize sobre la imagen </p>
    <p><span style="color:blue"></span></p>
-   
-   
    </div>
-   <p>
 <div data-role="popup" id="CD9">
 <p> Este es la imagen de CD9 zoom!!! </p>
-  <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">close</a> <img src="imagenes/indice.jpg" style="width="300px;height:300px;" alt="Skaret View">
+  <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">close</a> <img src="imagenes/hola.jpg" style="width="300px;height:300px;" alt="Skaret View">
   </div>
   <p>
   
@@ -172,11 +169,11 @@
 		<h1>Página cuatro</h1>
 	</div>
 	<div data-role="content">	
-	<img src="imagenes/CD9/descarga (3).jpg" width="291" height="173" alt="cd1"> 
-    <img src="imagenes/CD9/descarga (2).jpg" width="225" height="225" alt="cd2"> 
-    <img src="imagenes/CD9/descarga (1).jpg" width="275" height="184" alt="cd1">
+	<img src="imagenes/CD9/descarga3.jpg" width="291" height="173" alt="cd1"> 
+    <img src="imagenes/CD9/descarga2.jpg" width="225" height="225" alt="cd2"> 
+    <img src="imagenes/CD9/descarga1.jpg" width="275" height="184" alt="cd1">
     <img src="imagenes/CD9/descarga.jpg" width="183" height="275" alt="cd4">
-    <img src="imagenes/CD9/images (3).jpg" width="276" height="183" alt="cd5"> 
+    <img src="imagenes/CD9/images3.jpg" width="276" height="183" alt="cd5"> 
     </div>
 	<div data-role="footer" data-position="fixed">
     	<div data-role="navbar" data-iconpos="top">
