--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
 		<h1>Historia de CD9</h1>
 	</div>
 	<div data-role="content">
-    
-    <a href="#CD9" data-rel="popup" data-position="window">
-   <img src="imagenes/hola.jpg" alt="Skaret View"  style="width=10px"; id="cd"></a>
-   <p>Deslize sobre la imagen </p>
+	  <img src="imagenes/hola.png" id="cd" width="288" height="175">
+<p>Deslize sobre la imagen </p>
    <p><span style="color:blue"></span></p>
    </div>
 <div data-role="popup" id="CD9">
 <p> Este es la imagen de CD9 zoom!!! </p>
-  <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">close</a> <img src="imagenes/hola.jpg" style="width="300px;height:300px;" alt="Skaret View">
+  <a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">close</a> <img src="imagenes/hola.png" style="width="300px;height:300px;" alt="Skaret View">
   </div>
   <p>
   
